// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyFavoriteStore Component MyFavoriteStore should render correctly 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle="lbl_common_updateFavoriteStore"
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title="lbl_common_myFavoriteStore"
>
  <Styled(Text)
    fontSize="fs16"
    fontWeight="regular"
    text="Fulton Street"
  >
    Fulton Street
  </Styled(Text)>
  <Styled(Text)
    fontSize="fs16"
    text="471-485 Fulton Street"
  >
    471-485 Fulton Street
  </Styled(Text)>
  <Styled(Text)
    fontSize="fs16"
    text="Brooklyn, NY 11201"
  >
    Brooklyn, NY 11201
  </Styled(Text)>
  <Styled(Text)
    fontSize="fs16"
    text="(712) 431-1408"
  >
    (712) 431-1408
  </Styled(Text)>
</MyProfileTile>
`;

exports[`MyFavoriteStore Component should renders correctly when isMyPreferences is false 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title=""
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-LRG"
    text=""
    textDecoration={null}
  />
</MyProfileTile>
`;

exports[`MyFavoriteStore Component should renders correctly when isMyPreferences is present 1`] = `
<MyProfileTile
  birthdaySaving={false}
  className=""
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  dataLocator="myFavStoreLbl"
  handleComponentChange={[Function]}
  title=""
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XXL"
    text=""
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-LRG"
    text=""
    textDecoration={null}
  />
</MyProfileTile>
`;
